src/objects/TRIMEC__TRIM_Entry_Check_Setup__c.object
<CustomObject>
    <fields>
        <fullName>TRIMEC__Without_Sharing_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</description>
        <inlineHelpText>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</inlineHelpText>
        <label>Without Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Without_Sharing_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</description>
        <inlineHelpText>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</inlineHelpText>
        <label>Without Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__useRT4Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Record Types for Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__useRT4Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Record Types for Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__useRT4Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Record Types for Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__useRT4PersonAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Record Types for Person Accounts</description>
        <label>Use Record Types for Person Accounts</label>
        <type>Checkbox</type>
    </fields>
    <label>Entry Check Setup</label>
    <nameField>
        <label>Entry Check Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entry Check Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TRIMEC__Activation_of_DLD_Need_Action</fullName>
        <active>true</active>
        <description>If the dupe Lead Detector is activates, a minimum of additional parameters must be set.</description>
        <errorConditionFormula>AND( TRIMEC__DLDActive__c = true ,  ISBLANK( TRIMEC__DLDStatusSource__c ),  ISBLANK(  TRIMEC__DLDBlockSource__c  )  )</errorConditionFormula>
        <errorDisplayField>TRIMEC__DLDStatusSource__c</errorDisplayField>
        <errorMessage>When activating the Dupe Lead Detector, you must select at least one Lead Source for which the action apply.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMEC__Activation_of_DLD_Need_Match_Type</fullName>
        <active>true</active>
        <description>If the dupe Lead Detector is activates, a minimum of additional parameters must be set.</description>
        <errorConditionFormula>AND( TRIMEC__DLDActive__c = true ,  ISBLANK(TRIMEC__DLDMatchTypes__c) )</errorConditionFormula>
        <errorDisplayField>TRIMEC__DLDMatchTypes__c</errorDisplayField>
        <errorMessage>When activating the Dupe Lead Detector, you must select at least one Match Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMEC__Max_Query_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>TRIMEC__Query_Limit__c &gt; 100</errorConditionFormula>
        <errorDisplayField>TRIMEC__Query_Limit__c</errorDisplayField>
        <errorMessage>The maximum Query Limit cannot not be higher than 100 (default is 50)</errorMessage>
    </validationRules>
</CustomObject>